--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
               <div class="slide-inner slide-bg-image" data-background="../photos/hero/01.png">
                 <div class="container">
                   <div data-swiper-parallax="300" class="slide-title">
-                    <h2>Masters of Microsoft 365 
+                    <h2>Masters of Microsoft 365<br> 
                         tenant-to-tenant migrations</h2>
                   </div>
                   <div data-swiper-parallax="400" class="slide-text">
@@ -53,7 +53,9 @@
                   </div>
                   <div class="clearfix"></div>
                   <div data-swiper-parallax="500" class="slide-btns">
-                    <a href="#" class="theme-btn-s2">AVAILABLE ON AZURE MARKETPLACE</a>
+                    <button type="button" class="btn btn-primary btn-lg">
+                        <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                    </button>
                   </div>
                 </div>
               </div>
@@ -69,12 +71,14 @@
                   <div data-swiper-parallax="400" class="slide-text">
                     <h1>tenant to tenant Migrations,<br> 
                         AUTOMATED windows upgrade projects</h1>
-                        <p> ONETIK is a fully Co-sell <br>
+                        <p class="uppercase"> ONETIK is a fully Co-sell <br>
                         transactable SaaS solution</p>
                   </div>
                   <div class="clearfix"></div>
                   <div data-swiper-parallax="500" class="slide-btns">
-                    <a href="#" class="theme-btn-s2">AVAILABLE ON AZURE MARKETPLACE</a>
+                    <button type="button" class="btn btn-primary btn-lg">
+                        <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                    </button>
                   </div>
                 </div>
               </div>
@@ -89,11 +93,13 @@
                     <div class="row_space"></div>
                     <div data-swiper-parallax="400" class="slide-text">
                       <h1>ONETIK Inventory</h1>
-                      <p>Rapidly identify your environment <br> readiness for migration or upgrade</p>
+                      <p class="uppercase">Rapidly identify your environment <br> readiness for migration or upgrade</p>
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <a href="#" class="theme-btn-s2">AVAILABLE ON AZURE MARKETPLACE</a>
+                        <button type="button" class="btn btn-primary btn-lg">
+                            <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                        </button>
                     </div>
                   </div>
                 </div>
@@ -108,11 +114,13 @@
                     <div class="row_space"></div>
                     <div data-swiper-parallax="400" class="slide-text">
                       <h1>ONETIK Tenant Migrator</h>
-                      <p>Orchestrate and Automate the <br> transition FOR all Azure services</p>
+                      <p class="uppercase">Orchestrate and Automate the <br> transition FOR all Azure services</p>
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <a href="#" class="theme-btn-s2">AVAILABLE ON AZURE MARKETPLACE</a>
+                        <button type="button" class="btn btn-primary btn-lg">
+                            <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                        </button>
                     </div>
                   </div>
                 </div>
@@ -127,12 +135,15 @@
                     <div class="row_space"></div>
                     <div data-swiper-parallax="400" class="slide-text">
                       <h1>ONETIK Asset Management</h1>
-                      <p> Monitor and report on Asset location,<br> health and status</p>
+                      <p class="uppercase"> Monitor and report on Asset location,<br> health and status</p>
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <a href="#" class="theme-btn-s2">AVAILABLE ON AZURE MARKETPLACE</a>
+                        <button type="button" class="btn btn-primary btn-lg">
+                            <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
+                        </button>
                     </div>
+                    
                   </div>
                 </div>
                 <!-- end slide-inner -->
@@ -153,6 +164,7 @@
                     <h1>Why WE ARE different</h1>
                 </div>
             </div>
+            <div class="row_space_in"></div>
             <div class="row">
                 <div class="col">
                     <div class="card card_size_a">
@@ -293,6 +305,7 @@
                     </h1>
                 </div>
             </div>
+            <div class="row_space_in"></div>
             <div class="row">
                 <div class="col-9">
                     <div class="row">
@@ -425,6 +438,7 @@
             </div>
         </div>
     </section>
+    <div class="row_space"></div>
     <section id="products">
         <div class="container">
             <div class="row">
@@ -435,6 +449,7 @@
                     </p>
                 </div>
             </div>
+            <div class="row_space_in"></div>
             <div class="row dark-card" >
                 <div class="col">
                     <div>
@@ -503,10 +518,11 @@
                                 <input type="radio" />ONETIK Asset <br> Management
                               </a>
                             </div>
-                      
+                            <div class="row_space"></div>
                             <div class="tab-content">
                               <div class="tab-pane active" id="prices">
                                 <h1 class="text-uppercase">ONETIK Asset Management</h1>
+                                <div class="row_space_in"></div>
                                 <p>OKTIK  offers a white-label asset management solution. Enabling IT Asset Finance and Leasing companies  to brand the client interface as their own, enhancing brand visibility and reinforcing client loyalty.</p>
 
                                     <h3>Through our robust asset and endpoint management platform, ONETIK will:</h3>
@@ -534,11 +550,13 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-3 side_text_style">
+                <div class="col-3 side_text_style" style="padding: 90px 0px;">
                     <div class="row">
                         <div class="col">
                             <ul>
+                                <li> <br></li>
                                 <li>Orchestration </li>
+                                <li> <br></li>
                                
                             </ul>
                         </div>
@@ -546,7 +564,9 @@
                     <div class="row">
                         <div class="col">
                             <ul>
+                                <li> <br></li>
                                 <li>Automation </li>
+                                <li> <br></li>
                                
                             </ul>
                         </div>
@@ -583,7 +603,7 @@
                     <h1>SERVICES</h1>
                 </div>
             </div>
-            <div class="row_space"></div>
+            <div class="row_space_in"></div>
             <div class="row">
                 <div class="col ">
                     <p>Our Tactical SME teams undertake specific objectives at a fixed price with guaranteed outcomes, which can be adapted to work through SI’s and Partners.  Our teams possess the highest level of accreditation available to the specific technical disciplines we provide.</p>
@@ -648,7 +668,6 @@
                         <h3>An improved end-user experience</h3>
                     </div>
                 </div>
-                <div class="row_space"></div>
                 <div class="row">
                     <div class="col icons_">
                         <p>
@@ -690,6 +709,7 @@
             <div class="row">
                 <div class="col-10">
                     <h3 class="subheading text-uppercase">A real end user example of a failed upgrade</h3>
+                    <div class="row_space_in"></div>
                     <div class="inner-card-container">
                         <div class="card blue-card " style="background-image: linear-gradient(#174887, #062E62);">
                             <div class="inner-blue-card">
@@ -795,14 +815,24 @@
                     </div>
                 </div>
                 <div class="col-3 side_text_style">
-                    
-                        <ul>
-                            <li>
-                                <div class="row"><img src="../photos/Microsoft_logo_(2012).png" alt=""></div>
-                                <div class="row"><img src="../photos/crayon-group-logo-vector.png" alt=""></div>
-                                <div class="row"><img src="../photos/Logo_TD_SYNNEX.png" alt=""></div>
-                            </li>
-                        </ul>
+                    <div class="row">
+                        <div class="col"> <br><br><br><br><br><br><br><br><br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ul>
+                                <li>
+                                    <div class="row"><img src="../photos/Microsoft_logo_(2012).png" alt=""></div>
+                                    <div class="row"><img src="../photos/crayon-group-logo-vector.png" alt=""></div>
+                                    <div class="row"><img src="../photos/Logo_TD_SYNNEX.png" alt=""></div>
+                                </li>
+                            </ul>
+                        </div>
+                       
+                    </div>
+          
+                       
                         
                     
                 </div>
@@ -870,33 +900,36 @@
     </section>
     <div class="row_space"></div>
     <section id="contact">
+        
         <div class="container">
+            
             <div class="row">
-                <div class="col subheading text-uppercase">
+                <div class="col subheading text-uppercase text-center">
                     <h1>Contact us</h1>
                 </div>
             </div>
+            <div class="row_space_in"></div>
             <div class="row form ">
                 <div class="col">
                     <div class="row">
                         <label for="name">Name</label>
-                        <input type="text" placeholder="value">
+                        <input type="text" placeholder="">
                     </div>
 
                     <div class="row">
                         <label for="surname">Surname</label>
-                        <input type="text" placeholder="value">
+                        <input type="text" placeholder="">
                     </div>
 
                     <div class="row">
                         <label for="name">Email</label>
-                        <input type="email" placeholder="value">
+                        <input type="email" placeholder="">
                     </div>
 
                     <div class="row">
                         <label for="message">Message</label>
                 
-                        <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="value"></textarea>
+                        <textarea rows="4" cols="50" name="comment" form="usrform" placeholder=""></textarea>
                     </div>
 
                     <div class="row"><button>submit</button></div>
@@ -904,10 +937,11 @@
                 </div>
             </div>
         </div>
+       
     </section>
     
 </main>
-<div class="row_space"></div>
+
 <footer>
     <div class="footer-container">
         <div class="row">
