--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>OKTik</title>
 <link rel="icon" type="image/x-icon" href="../photos/OKTikLogo 3.png">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,7 +18,7 @@
 
 <header>
     <div class="header-container">
-        <a href="#" class="logo"><img src="../photos/OKTik Logo dark.png" alt="OKTik" style="float:left";></a>
+        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.svg" alt="OKTik" style="float:left;width: 300px;";></a>
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
         </button>
@@ -85,7 +85,7 @@
               <!-- end slide-inner -->
             </div>
             <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png">
+                <div class="slide-inner slide-bg-image" data-background="../photos/hero/03.png">
                   <div class="container">
                     <div data-swiper-parallax="300" class="slide-title">
                         <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -106,7 +106,7 @@
                 <!-- end slide-inner -->
               </div>
             <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png">
+                <div class="slide-inner slide-bg-image" data-background="../photos/hero/04.png">
                   <div class="container">
                     <div data-swiper-parallax="300" class="slide-title">
                         <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -127,7 +127,7 @@
                 <!-- end slide-inner -->
               </div>
             <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png">
+                <div class="slide-inner slide-bg-image" data-background="../photos/hero/05.png">
                   <div class="container">
                     <div data-swiper-parallax="300" class="slide-title">
                      <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -168,7 +168,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card card_size_a">
-                        <img src="../photos/rec1.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/rec1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">A team of leading industry experts dedicated to digital workplace transformation and management.</p>
                         </div>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col">
                     <div class="card card_size_a" >
-                        <img src="../photos/rec2.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/rec2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">One-click user-led automated migration  simplifies the complexity, is flexible and outcome-orientated.</p>
                         </div>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col">
                     <div class="card card_size_a" >
-                        <img src="../photos/rec3.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/rec3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Extensive endpoint information is captured and stored in Microsoft Azure.</p>
                         </div>
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card card_size_a">
-                        <img src="../photos/rec4.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/rec4.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Dashboards to report on both user and data migration processes enable quick adjustment to unforeseen technical or environmental blockers.</p>
                         </div>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="col">
                     <div class="card card_size_a" >
-                        <img src="../photos/rec5.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/rec5.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">The migration of the entire end-user environment is automated, and user settings are restored without manual intervention.</p>
                         </div>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col">
                     <div class="card card_size_a" >
-                        <img src="../photos/rec6.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/rec6.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">OKTIK delivery is a combination of Microsoft Azure Marketplace Tools and best-in-class professional services.</p>
                         </div>
@@ -232,7 +232,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="card card_size_b " >
-                                <img src="../photos/rec7.png" class="card-img-top" alt="...">
+                                <img src="../photos/carousel/rec7.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <p class="card-text">OKTIK delivery is a combination on Microsoft Azure Marketplace Tools and best in class professional services.</p>
                                 </div>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="col">
                             <div class="card card_size_b" >
-                                <img src="../photos/rec8.png" class="card-img-top" alt="...">
+                                <img src="../photos/carousel/rec8.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <p class="card-text">We deal in both cloud and hybrid environments, across public and private networks, and deliver a secure-by-design approach, verified by Microsoft and other large enterprise clients.</p>
                                 </div>
@@ -248,7 +248,7 @@
                         </div>
                         <div class="col">
                             <div class="card card_size_b">
-                                <img src="../photos/rec9.png" class="card-img-top" alt="...">
+                                <img src="../photos/carousel/rec9.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <p class="card-text">For a global project, user scenarios are carefully defined, assessing geographic differences based on local
                                     in-country needs.</p>
@@ -261,7 +261,7 @@
                     <div class="row">
                         <div class="col">
                             <ul>
-                                <li> <img src="../photos/rec10.png" alt="Coca-Cola" ></li>
+                                <li> <img src="../photos/logo/cocacola logo.png" alt="Coca-Cola" ></li>
                                 <li><button class="side-button">Read the case study</button></li>
                             </ul>
                         </div>
@@ -453,7 +453,7 @@
             <div class="row dark-card" >
                 <div class="col">
                     <div>
-                        <img src="../photos/p1.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1>ONETIK</h1>
                           <p>License Management</p>
@@ -462,7 +462,7 @@
                 </div>
                 <div class="col">
                     <div >
-                        <img src="../photos/p2.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1>ONETIK</h1>
                             <p>Environment Inventory</p>
@@ -471,7 +471,7 @@
                 </div>
                 <div class="col">
                     <div>
-                        <img src="../photos/p3.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1>ONETIK</h1>
                             <p>Tenant Migrator</p>
@@ -481,7 +481,7 @@
                 </div>
                 <div class="col">
                     <div >
-                        <img src="../photos/p4.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p4.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1>ONETIK</h1>
                             <p>Asset Management</p>
@@ -505,13 +505,13 @@
                         <div class="row">
                           <div class="col-xs12">
                             <div id="tab" class="btn-group btn-group-justified" data-toggle="buttons">
-                              <a href="#prices" class="btn btn-default active" data-toggle="tab">
+                              <a href="#licenseManagement" class="btn btn-default active" data-toggle="tab">
                                 <input type="radio" />ONETIK License <br>Management
                               </a>
-                              <a href="#features" class="btn btn-default" data-toggle="tab">
+                              <a href="#environmentInventory" class="btn btn-default" data-toggle="tab">
                                 <input type="radio" />ONETIK Environment <br>Inventory
                               </a>
-                              <a href="#requests" class="btn btn-default" data-toggle="tab">
+                              <a href="#tenantMigrator" class="btn btn-default" data-toggle="tab">
                                 <input type="radio" />ONETIK Tenant<br> Migrator
                               </a>
                               <a href="#contact" class="btn btn-default" data-toggle="tab">
@@ -520,7 +520,83 @@
                             </div>
                             <div class="row_space"></div>
                             <div class="tab-content">
-                              <div class="tab-pane active" id="prices">
+                              <div class="tab-pane active" id="licenseManagement">
+                                <h1 class="text-uppercase">OneTik License Management</h1>
+                                <div class="row_space_in"></div>
+                                <p>
+                                    Workplace priorities and productivity demands are always evolving. Often, Azure and
+                                    Microsoft 365 licenses are not monitored, and typically users in an organization are not
+                                    fully utilising all license features. Often licenses are auto-assigned a higher tier of MS
+                                    license than required, or an employee leaves the company and the license remains
+                                    active – all contributing towards an unnecessary overspend.
+
+                                </p>
+                                <p>
+                                    If you’re looking for or an intuitive, customisable, adaptable reporting interface to
+                                    maximise your MS license investment, with the potential to extend to other vendor
+                                    license modules, OneTik Saas is ready to transform your organisation.
+
+                                </p>
+                                    <ul>
+                                        <li>Multi-tenant discovery in a single click with a customized reporting interface,
+                                            powered by AI</li>
+                                        <li>
+                                            Audit and identify areas for improved adoption, efficiency and training, and
+                                            reduction of unnecessary license overspend
+                                        </li>
+                                        <li>Full Microsoft License analytics engine running in MS Azure, which analyses
+                                            users in Realtime</li>
+                                        <li>Flexible customer pricing – the cost of tool is covered within identified annual
+                                            savings</li>
+                                        <li>Available via Azure Marketplace (link) and attainable via existing EA/MACC</li>
+                                    </ul>
+                                    
+                              </div>
+                              <div class="tab-pane" id="environmentInventory">
+
+                                <h1 class="text-uppercase">OneTik Environment Inventory</h1>
+                                <div class="row_space_in"></div>
+                                <p>Manual Windows upgrades to a user estate are both costly and time-consuming, and in
+                                    planning for the immimnent Windows 10 and Exchange on-premise end of life in 2025,
+                                    organisations need a Microsoft partner with the highest level of accreditation to facilitate
+                                    and expediate this level of change</p>
+
+                                    <ul>
+                                        <li>Solve inter-operability and compatibility issues with hardware and applications
+                                            without disruption</li>
+                                        <li>
+                                            Remote (including home-based) users receive an upgrade without the need to
+visit the office
+                                        </li>
+                                        <li>Ensures your estate is Co-Pilot ready to maximise future investment</li>
+                                        <li>Identifies risk areas for Compliance and Security Assessments</li>
+                                        <li>Customisable interface for inventory capture and reporting</li>
+                                        <li>Monitor user backup of data to OneDrive and monitor and report on Sync status</li>
+                                    </ul>
+                                    
+                              </div>
+                              <div class="tab-pane" id="tenantMigrator">
+                                
+                                <h1 class="text-uppercase">OneTik Tenant Migrator</h1>
+                                <div class="row_space_in"></div>
+                                <p>A merger, acquisition or divestiture determines the need for a complex workplace
+                                    service migration.</p>
+
+                                    <ul>
+                                        <li>Perform migrations with zero user impact, without operational disruption, and
+                                            account for multiple user use-cases which are systematically assessed and
+                                            recorded</li>
+                                        <li>
+                                            Ensures the best possible end-user experience by performing a single process
+                                            rather than multiple migration projects over time
+                                        </li>
+                                        <li>Migrate users with a single-click and receive rapid issue identification</li>
+                                        <li>Absolute assurance for zero data loss, security and outcomes</li>
+                                    </ul>
+                                   
+                              </div>
+                              <div class="tab-pane" id="assetManagement">
+                                
                                 <h1 class="text-uppercase">ONETIK Asset Management</h1>
                                 <div class="row_space_in"></div>
                                 <p>OKTIK  offers a white-label asset management solution. Enabling IT Asset Finance and Leasing companies  to brand the client interface as their own, enhancing brand visibility and reinforcing client loyalty.</p>
@@ -542,9 +618,6 @@
                                         <li>Remote monitoring and management</li>
                                     </ul>
                               </div>
-                              <div class="tab-pane" id="features">Features Content</div>
-                              <div class="tab-pane" id="requests">Requests Content</div>
-                              <div class="tab-pane" id="contact">Contact Content</div>
                             </div>
                           </div>
                         </div>
@@ -843,11 +916,12 @@
     <section id="study">
         <div class="container">
             <div class="row">
-                <div class="col subheading text-uppercase">
+                <div class="col-7 subheading text-uppercase">
                     <h1>Customer case study</h1>
                 </div>
-                <div class="col"><img src="../photos/rec10.png" alt="OKTik"></div>
+                <div class="col-5"><img src="../photos/logo/cocacola logo.png" alt="COCA-COLA"></div>
             </div>
+            <div class="row_space_in"></div>
             <div class="row ">
                 <div class="col-9 border-card">
                     <h1>OKTIK, COCA-COLA EUROPACIFIC PARTNERS AND ONETIK</h1>
@@ -946,7 +1020,7 @@
     <div class="footer-container">
         <div class="row">
             <div class="col">
-                <img src="../photos/footerLogo.png" alt="OKTik" style="float:left";>
+                <img src="../photos/logo/OKTik Logo Final_OKTik White Logo.svg" alt="OKTik" style="float:left;width: 400px;margin-top: 20px;";>
             </div>
             <div class="col">
                 <div class="row text-align-left">
