--- a/public/style.css
+++ b/public/style.css
@@ -228,6 +228,7 @@ body {
 .card-img{
   display: flex;
   justify-content: center;
+
 }
 .card .icon{
   width: 143px;
@@ -248,6 +249,13 @@ body {
   font-weight: 400 ;
   font-size: 14px;
   line-height: 25px;
+}
+.card img {
+  transition: .4s;
+  
+}
+.card img:hover{
+  transform: scale(1.1);
 }
 #products .dark-card img{
   width: 164px;
