--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,21 +22,21 @@
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
         </button>
-        <nav class="nav-links" id="navLinks">
-            <a href="#home" class="">Home</a>
-            <a href="#about">About</a>
-            <a href="#products">Products</a>
-            <a href="#services">Services</a>
-            <a href="#experience">User experience</a>
-            <a href="#media">Media and partners</a>
-            <a href="#study">Case studies</a>
-            <a href="#contact">Contact us</a>
+        <nav class="nav-menu" id="nav-menu">
+            <a href="#home" class="nav-link active">Home</a>
+            <a href="#about" class="nav-link">About</a>
+            <a href="#products" class="nav-link">Products</a>
+            <a href="#services" class="nav-link">Services</a>
+            <a href="#experience" class="nav-link">User experience</a>
+            <a href="#media" class="nav-link">Media and partners</a>
+            <a href="#study" class="nav-link">Case studies</a>
+            <a href="#contact" class="nav-link">Contact us</a>
         </nav>
     </div>
 </header>
 
 <main>
-    <section id="home" class="hero-slider hero-style">
+    <section id="home" class="hero-slider hero-style section home">
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -156,11 +156,10 @@
           <div class="swiper-button-prev"></div>
         </div>
     </section>
-    <div class="row_space"></div>
-    <section id="about">
+    <section id="about" class="section about">
         <div class="container ">
             <div class="row">
-                <div class="col subheading text-uppercase text-center">
+                <div class="col subheading text-uppercase text-center about-subtitle">
                     <h1>Why WE ARE different</h1>
                 </div>
             </div>
@@ -438,8 +437,7 @@
             </div>
         </div>
     </section>
-    <div class="row_space"></div>
-    <section id="products">
+    <section id="products" class="section products">
         <div class="container">
             <div class="row">
                 <div class="col subheading text-uppercase">
@@ -453,38 +451,41 @@
             <div class="row dark-card" >
                 <div class="col">
                     <div>
-                        <img src="../photos/carousel/p1.png" class="card-img-top" alt="...">
+                        <div class="skills-img">
+                            <img src="../photos/carousel/p1.png" class="card-img-top " alt="...">
+                        </div>
+                        
                         <div class="card-body">
-                            <h1>ONETIK</h1>
-                          <p>License Management</p>
+                            <h1 class="skills-name">ONETIK</h1>
+                          <p class="skills-name">License Management</p>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div >
-                        <img src="../photos/carousel/p2.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p2.png" class="card-img-top skills-img" alt="...">
                         <div class="card-body">
-                            <h1>ONETIK</h1>
-                            <p>Environment Inventory</p>
+                            <h1 class="skills-name">ONETIK</h1>
+                            <p class="skills-name">Environment Inventory</p>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div>
-                        <img src="../photos/carousel/p3.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p3.png" class="card-img-top skills-img" alt="...">
                         <div class="card-body">
-                            <h1>ONETIK</h1>
-                            <p>Tenant Migrator</p>
+                            <h1 class="skills-name">ONETIK</h1>
+                            <p class="skills-name">Tenant Migrator</p>
                           
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div >
-                        <img src="../photos/carousel/p4.png" class="card-img-top" alt="...">
+                        <img src="../photos/carousel/p4.png" class="card-img-top skills-img" alt="...">
                         <div class="card-body">
-                            <h1>ONETIK</h1>
-                            <p>Asset Management</p>
+                            <h1 class="skills-name">ONETIK</h1>
+                            <p class="skills-name">Asset Management</p>
                          
                         </div>
                       </div>
@@ -514,7 +515,7 @@
                               <a href="#tenantMigrator" class="btn btn-default" data-toggle="tab">
                                 <input type="radio" />ONETIK Tenant<br> Migrator
                               </a>
-                              <a href="#contact" class="btn btn-default" data-toggle="tab">
+                              <a href="#assetManagement" class="btn btn-default" data-toggle="tab">
                                 <input type="radio" />ONETIK Asset <br> Management
                               </a>
                             </div>
@@ -668,8 +669,7 @@ visit the office
             </div>
         </div>
     </section>
-    <div class="row_space"></div>
-    <section id="services" class="services">
+    <section id="services" class="services section ">
         <div class="container ">
             <div class="row">
                 <div class="col subheading text-uppercase">
@@ -719,8 +719,7 @@ visit the office
         </div>
 
     </section >
-    <div class="row_space"></div>
-    <section id="experience" class="customer">
+    <section id="experience" class="customer section">
         <div class="container">
             <div class="card text-center">
                 <div class="row">
@@ -756,25 +755,25 @@ visit the office
                     <div class="col">
                         <div class="row">
                             <div class="col">
-                                <img src="../photos/u1.png" alt="OKTik">
+                                <img src="../photos/u1.png" alt="OKTik" class="skills-img">
                             </div>
                         </div>
                         <div class="row_space"></div>
                         <div class="row">
                             <div class="col">
-                                <h5>Automated </h5>
+                                <h5 class="skills-name">Automated </h5>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <img src="../photos/u2.png" alt="OKTik">
+                        <img src="../photos/u2.png" alt="OKTik" class="skills-img">
                         <div class="row_space"></div>
-                        <h5>Zero data loss</h5>
+                        <h5 class="skills-name">Zero data loss</h5>
                     </div>
                     <div class="col">
-                        <img src="../photos/u3.png" alt="OKTik">
+                        <img src="../photos/u3.png" alt="OKTik" class="skills-img">
                         <div class="row_space"></div>
-                        <h5>Complex problem solving</h5>
+                        <h5 class="skills-name">Complex problem solving</h5>
                     </div>
                 </div>
             </div>
@@ -845,8 +844,7 @@ visit the office
             </div>
         </div>
     </section>
-    <div class="row_space"></div>
-    <section id="media">
+    <section id="media" class="media section">
         <div class="container">
             <div class="row">
                 <div class="col subheading text-uppercase">
@@ -912,8 +910,7 @@ visit the office
             </div>
         </div>
     </section>
-    <div class="row_space"></div>
-    <section id="study">
+    <section id="study" class="study section">
         <div class="container">
             <div class="row">
                 <div class="col-7 subheading text-uppercase">
@@ -972,8 +969,7 @@ visit the office
 
         </div>
     </section>
-    <div class="row_space"></div>
-    <section id="contact">
+    <section id="contact" class="contact section">
         
         <div class="container">
             
@@ -1067,7 +1063,7 @@ visit the office
 <div class="back-to-top" id="backToTop">
     <i class="fas fa-chevron-up"></i>
 </div>
-
+<script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js" integrity="sha512-ZHauUc/vByS6JUz/Hl1o8s2kd4QJVLAbkz8clgjtbKUJT+AG1c735aMtVLJftKQYo+LD62QryvoNa+uqy+rCHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -1075,6 +1071,7 @@ visit the office
 <script src="./slider.js"></script>
 <script src="./loader.js"></script>
 <script src="./nav.js"></script>
+<script src="./leonam-silva-de-souza.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js" integrity="sha512-QAV866KcCo2YSgj8D7BW+Zn3Fe5wVKTWwzKtWy8mkW+tePcJL7JYilvdfrBFQcdz4ODD48GpIPnhTp9UDI37uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
